--- a/about.html
+++ b/about.html
@@ -19,9 +19,27 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
+  <!-- Div untuk menampilkan preloader - Materialize -->
+  <div class="preloader-background">
+    <div class="preloader-wrapper big active">
+      <div class="spinner-layer spinner-red-only">
+        <div class="circle-clipper left">
+          <div class="circle"></div>
+        </div>
+        <div class="gap-patch">
+          <div class="circle"></div>
+        </div>
+        <div class="circle-clipper right">
+          <div class="circle"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="navbar">
     <nav class="lighten-1" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">S-Url Rebrand</a>
@@ -44,19 +62,25 @@
       <div class="col s12 m8 offset-m2">
         <img src="images/logo.png" class="materialboxed img-logo" alt="" srcset="">
         <h3>S-URL Rebrand Shortener</h3>
-        <p>S-URL Rebrand Shortener Penyingkat URL yang ramah pengguna. S-URL Rebrand juga memiliki fitur update berita covid yang selalu update.</p>
+        <p>S-URL Rebrand Shortener Penyingkat URL yang ramah pengguna. S-URL Rebrand juga memiliki fitur update
+          berita covid yang selalu update.</p>
         <p>
-          URL Shortener  adalah teknik di World Wide Web yang mana Uniform Resource Locator (URL) dapat dibuat secara substansial lebih pendek dan masih mengarahkan ke halaman yang dibutuhkan. Fungsinya sendiri, URL Shortener tentu memudahkan pengguna internet dalam mengakses dan mengingat sebuah link, dikarenakan link tersebut akan lebih pendek karakternya.
+          URL Shortener adalah teknik di World Wide Web yang mana Uniform Resource Locator (URL) dapat dibuat
+          secara substansial lebih pendek dan masih mengarahkan ke halaman yang dibutuhkan. Fungsinya sendiri,
+          URL Shortener tentu memudahkan pengguna internet dalam mengakses dan mengingat sebuah link,
+          dikarenakan link tersebut akan lebih pendek karakternya.
         </p>
         <h4>Kenapa menggunakan S-Short Rebrand?</h4>
-        <p>Kadang kala kita ingin membagikan (share) link kita, halaman yang kita bagikan ke internet akan terlihat lebih enak dilihat, tidak terlihat url yang mungkin sangat panjang, sehingga user(pengguna internet) lainnya tidak merasa terganggu(tidak nyaman) dengan link share kita.</p>
+        <p>Kadang kala kita ingin membagikan (share) link kita, halaman yang kita bagikan ke internet akan
+          terlihat lebih enak dilihat, tidak terlihat url yang mungkin sangat panjang, sehingga user(pengguna
+          internet) lainnya tidak merasa terganggu(tidak nyaman) dengan link share kita.</p>
         <h4>Contoh kemudahan menggunakan S-Url Rebrand</h4>
         <p>
-            Link asli: <br>
-            https://chordqu.com/mahalini-nuca/chord-gitar-%20mahalini-&-nuca-aku-yang-salah<br><br>
+          Link asli: <br>
+          https://chordqu.com/mahalini-nuca/chord-gitar-%20mahalini-&-nuca-aku-yang-salah<br><br>
 
-            Bisa disingkat menjadi: <br>
-            https://rebrand.ly/i0citzw
+          Bisa disingkat menjadi: <br>
+          https://rebrand.ly/i0citzw
         </p>
       </div>
     </div>
@@ -80,12 +104,16 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="https://github.com/krisnantobi" target="__blank">Github</a>
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="https://github.com/krisnantobi" target="__blank">Github</a>
       </div>
     </div>
   </footer>
-
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- 
+    Import pageloader
+   -->
+  <script src="js/pageloader.js"></script>
 </body>
 
 </html>
