--- a/index.html
+++ b/index.html
@@ -149,18 +149,13 @@
     file /js/utilities.js berisi konfigurasi atau helper yang dibutuhkan untuk materialize
     seperti open menu sidebar
    -->
-  <script src="js/utilities.js"></script>
-
-  <!-- 
-    Import pageloader
-   -->
-  <script src="js/pageloader.js"></script>
+  <!-- <script src="js/utilities.js"></script> -->
 
   <!-- 
     file /js/api-route.js berisi konfigurasi atau fungsi yang digunakan untuk request api
    -->
   <script src="js/api-route.js"></script>
-  <script src="serviceworker.js"></script>
+  <!-- <script src="serviceworker.js"></script> -->
 </body>
 
 </html>
