--- a/about.html
+++ b/about.html
@@ -110,10 +110,16 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- 
-    Import pageloader
-   -->
-  <script src="js/pageloader.js"></script>
+  <script>
+  // Event for page loader
+  document.addEventListener("DOMContentLoaded", function(){
+    $('.preloader-background').delay(1700).fadeOut('slow');
+    
+    $('.preloader-wrapper')
+      .delay(1700)
+      .fadeOut();
+  });
+  </script>
 </body>
 
 </html>
