Fix page loader

--- a/index.html
+++ b/index.html
@@ -139,23 +139,15 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
   <!-- 
      === Disini untuk implementasi Responsive Web Design ===
      Saya menggunakan materialize
   -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!-- 
-    file /js/utilities.js berisi konfigurasi atau helper yang dibutuhkan untuk materialize
-    seperti open menu sidebar
+    file /js/main.js berisi konfigurasi atau fungsi yang digunakan untuk request api dan helper function materialize dan page loader
    -->
-  <!-- <script src="js/utilities.js"></script> -->
-
-  <!-- 
-    file /js/api-route.js berisi konfigurasi atau fungsi yang digunakan untuk request api
-   -->
-  <script src="js/api-route.js"></script>
-  <!-- <script src="serviceworker.js"></script> -->
+  <script src="js/main.js"></script>
 </body>
 
 </html>
