--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
+  <!-- Penambahan file manifest yang digunakan untuk meta app saat di install di mobile.  -->
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
