--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="footer-copyright">
       <div class="container">
       © 2014 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="https://github.com/otnansirk" target="__blank">Github</a>
+      <a class="grey-text text-lighten-4 right" href="https://github.com/otnansirk" target="__blank">github.com</a>
       </div>
     </div>
   </footer>
