--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
     <div class="footer-copyright">
       <div class="container">
         © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="https://github.com/krisnantobi" target="__blank">Github</a>
+        <a class="grey-text text-lighten-4 right" href="https://github.com/otnansirk" target="__blank">Github</a>
       </div>
     </div>
   </footer>
